<resources>
    <string name="app_name">HeartRate</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="call">呼叫</string>
    <string name="email">邮箱</string>
    <string name="phone">手机</string>
    <string name="person_name">联系人</string>
    <string name="hint_etUser">请输入员工名称</string>
    <string name="title_activity_spinner">SpinnerActivity</string>
    <string-array name="province1">
        <item>河北</item>
        <item>北京</item>
        <item>天津</item>
        <item>合肥</item>
        <item>上海</item>
        <item>甘肃</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_recycler_view">RecyclerView</string>

</resources>
